--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WLD Price Frame - Bitkub THB (Final Version)</title>
+    <title>ราคา WLD เป็นเงิน บาท สนใจสอบถามได้นะครับ</title>
     <style>
         /* ------------------------------------------------------------------
            CSS: การออกแบบกรอบรูป
@@ -289,4 +289,5 @@
         
     </script>
 </body>
+
 </html>
